# rocketseat-ia-crewai-stocks

./: .pre-commit-config.yaml  app.py  crewai-stocks.ipynb  pyproject.toml
.code_quality/: .flake8  .pylintrc  bandit.yaml
